--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Glop"]
 	path = Glop
-	url = ssh://gituser@thunderingvictory.dyndns.org/Volumes/Squee/Glop
+	url = git@github.com:zorbathut/glop.git
