--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "glop"]
 	path = glop
 	url = git@github.com:zorbathut/glop.git
+[submodule "lgl"]
+	path = lgl
+	url = git@github.com:zorbathut/lgl.git
