--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "mild"]
 	path = mild
 	url = git@github.com:zorbathut/mild.git
+[submodule "opengal32"]
+	path = opengal32
+	url = git@github.com:zorbathut/opengal32.git
