--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "logal"]
+[submodule "libs/logal"]
 	path = libs/logal
 	url = git@github.com:zorbathut/logal.git
-[submodule "opengal32"]
+[submodule "libs/opengal32"]
 	path = libs/opengal32
 	url = git@github.com:zorbathut/opengal32.git
 [submodule "libs/frames"]
