--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libs/frames"]
 	path = libs/frames
-	url = git@github.com:zorbathut/frames.git
+	url = git@github.com:zorbathut/frame.git
 [submodule "libs/logal"]
 	path = libs/logal
 	url = git@github.com:zorbathut/logal.git
