--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "libs/frames"]
-	path = libs/frames
-	url = git@github.com:zorbathut/frame.git
 [submodule "libs/logal"]
 	path = libs/logal
 	url = git@github.com:zorbathut/logal.git
 [submodule "libs/opengal32"]
 	path = libs/opengal32
 	url = git@github.com:zorbathut/opengal32.git
+[submodule "libs/frame"]
+	path = libs/frame
+	url = git@github.com:zorbathut/frame.git
